# WinShortcutLauncher

./: .gitignore  ANIMATION_STYLE_V7_README.md  AUTO_EDGE_BOUNCE_V9_README.md  CHANGELOG.md  CUSTOM_UI_BACKGROUND_V13_README.md  DB_IMPORT_TITLEBAR_TOPBAR_V14_README.md  EDGE_DOCK_NATIVE_README.md  EDGE_DOCK_V3_README.md  EDGE_NATIVE_POLL_README.md  README.md  SETTINGS_LAUNCH_FIX_V11_README.md  TITLEBAR_ICON_FAST_V12_README.md  TOPBAR_SEARCH_TRANSFER_MERGE_V15_README.md  V16_MERGED_README.md  V18_EDGE_STABILITY_README.md  V19_EDGE_GHOST_BUILD_FIX_README.md  V20_SEARCH_TRANSFER_EDGE_FIX_README.md  V21_ICON_PERFORMANCE_REFACTOR_README.md  V22_IMAGE_BROWSER_EDGE_SPEED_README.md  V23_IMAGE_BROWSER_UI_README.md  V24_IMAGE_BROWSER_GROUPS_README.md  V25_OVERLAY_DWM_FIX_README.md  V26_DELETE_NAV_REACT185_FIX_README.md  V27_NOTE_SETTINGS_SPLIT_README.md  V28_NOTES_CONTEXT_SETTINGS_README.md  V29_NOTE_MENU_POSITION_CARET_FIX_README.md  V30_OPERATION_COLLAPSE_THEME_DEDUP_README.md  V31_IMAGE_RENAME_CROP_URL_DIALOG_README.md  V32_SPECIAL_ALL_PIN_DRAG_FIX_README.md  V33_SINGLE_CLICK_ITEM_DRAG_FIX_README.md  V34_RESTORE_DIRECTORY_DRAG_ITEM_FIX_README.md  V35_URL_DIALOG_DRAG_SETTINGS_README.md  V36_SINGLE_CLICK_DRAG_GUARD_README.md  V37_DRAG_FAVICON_TASKBAR_FIX_README.md  V38_IMAGE_CROP_UI_DIALOG_FIX_README.md  V39_HELP_SPONSOR_SETTINGS_README.md  V40_FAVICON_CROP_FIX_README.md  V41_SINGLE_INSTANCE_MULTI_TASKBAR_README.md  V42_SETTINGS_NAV_RAINBOW_README.md  V43_MULTI_RAINBOW_CURSOR_README.md  (+9 more)
src/: App.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
(+71 files in other folders)
